--- a/shopingo_V2/contact-us.html
+++ b/shopingo_V2/contact-us.html
@@ -478,7 +478,7 @@
 						<div class="row">
 							<div class="col-lg-8">
 								<div class="p-3 bg-light">
-									<form>
+									<form action="https://usebasin.com/f/ea037e03fffc" method="post">
 										<div class="form-body">
 											<h6 class="mb-0 text-uppercase">Escribenos</h6>
 											<div class="my-3 border-bottom"></div>
