--- a/shopingo_V2/index.html
+++ b/shopingo_V2/index.html
@@ -1600,7 +1600,339 @@
 				</section>
 				<!--end brands-->
 				
-				
+				<!--start bottom products section-->
+				<section class="py-4 border-top">
+					<div class="container">
+						<div class="row row-cols-1 row-cols-md-2 row-cols-xl-4">
+							<div class="col">
+								<div class="bestseller-list mb-3">
+									<h6 class="mb-3 text-uppercase fw-bold">Best Selling Products</h6>
+									<hr>
+									<div class="d-flex align-items-center gap-3">
+										<div class="bottom-product-img">
+											<a href="product-details.html">
+												<img src="assets/images/products/01.png" width="80" alt="">
+											</a>
+										</div>
+										<div class="">
+											<h6 class="mb-0 fw-light mb-1 fw-bold">Men Casual Shirts</h6>
+											<div class="rating"> <i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+											</div>
+											<p class="mb-0 pro-price"><strong>$59.00</strong>
+											</p>
+										</div>
+									</div>
+									<hr/>
+									<div class="d-flex align-items-center gap-3">
+										<div class="bottom-product-img">
+											<a href="product-details.html">
+												<img src="assets/images/products/02.png" width="80" alt="">
+											</a>
+										</div>
+										<div class="ms-0">
+											<h6 class="mb-0 fw-light mb-1 fw-bold">Formal Coat Pant</h6>
+											<div class="rating"> <i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+											</div>
+											<p class="mb-0 pro-price"><strong>$59.00</strong>
+											</p>
+										</div>
+									</div>
+									<hr/>
+									<div class="d-flex align-items-center gap-3">
+										<div class="bottom-product-img">
+											<a href="product-details.html">
+												<img src="assets/images/products/03.png" width="80" alt="">
+											</a>
+										</div>
+										<div class="ms-0">
+											<h6 class="mb-0 fw-light mb-1 fw-bold">Women Blue Jeans</h6>
+											<div class="rating"> <i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+											</div>
+											<p class="mb-0 pro-price"><strong>$59.00</strong>
+											</p>
+										</div>
+									</div>
+									<hr/>
+									<div class="d-flex align-items-center gap-3">
+										<div class="bottom-product-img">
+											<a href="product-details.html">
+												<img src="assets/images/products/04.png" width="80" alt="">
+											</a>
+										</div>
+										<div class="ms-0">
+											<h6 class="mb-0 fw-light mb-1 fw-bold">Yellow Track Suit</h6>
+											<div class="rating"> <i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+											</div>
+											<p class="mb-0 pro-price"><strong>$59.00</strong>
+											</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col">
+								<div class="featured-list mb-3">
+									<h6 class="mb-3 text-uppercase fw-bold">Featured Products</h6>
+									<hr>
+									<div class="d-flex align-items-center gap-3">
+										<div class="bottom-product-img">
+											<a href="product-details.html">
+												<img src="assets/images/products/05.png" width="80" alt="">
+											</a>
+										</div>
+										<div class="ms-0">
+											<h6 class="mb-0 fw-light mb-1 fw-bold">Men Sports Shoes</h6>
+											<div class="rating"> <i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+											</div>
+											<p class="mb-0 pro-price"><strong>$59.00</strong>
+											</p>
+										</div>
+									</div>
+									<hr/>
+									<div class="d-flex align-items-center gap-3">
+										<div class="bottom-product-img">
+											<a href="product-details.html">
+												<img src="assets/images/products/06.png" width="80" alt="">
+											</a>
+										</div>
+										<div class="ms-0">
+											<h6 class="mb-0 fw-light mb-1 fw-bold">Black Sofa Set</h6>
+											<div class="rating"> <i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+											</div>
+											<p class="mb-0 pro-price"><strong>$59.00</strong>
+											</p>
+										</div>
+									</div>
+									<hr/>
+									<div class="d-flex align-items-center gap-3">
+										<div class="bottom-product-img">
+											<a href="product-details.html">
+												<img src="assets/images/products/07.png" width="80" alt="">
+											</a>
+										</div>
+										<div class="ms-0">
+											<h6 class="mb-0 fw-light mb-1 fw-bold">Sports Watch</h6>
+											<div class="rating"> <i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+											</div>
+											<p class="mb-0 pro-price"><strong>$59.00</strong>
+											</p>
+										</div>
+									</div>
+									<hr/>
+									<div class="d-flex align-items-center gap-3">
+										<div class="bottom-product-img">
+											<a href="product-details.html">
+												<img src="assets/images/products/08.png" width="80" alt="">
+											</a>
+										</div>
+										<div class="ms-0">
+											<h6 class="mb-0 fw-light mb-1 fw-bold">Women Blue Heels</h6>
+											<div class="rating"> <i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+											</div>
+											<p class="mb-0 pro-price"><strong>$59.00</strong>
+											</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col">
+								<div class="new-arrivals-list mb-3">
+									<h6 class="mb-3 text-uppercase fw-bold">New arrivals</h6>
+									<hr>
+									<div class="d-flex align-items-center gap-3">
+										<div class="bottom-product-img">
+											<a href="jproduct-details.html">
+												<img src="assets/images/products/09.png" width="80" alt="">
+											</a>
+										</div>
+										<div class="ms-0">
+											<h6 class="mb-0 fw-light mb-1 fw-bold">Men Black Cap</h6>
+											<div class="rating"> <i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+											</div>
+											<p class="mb-0 pro-price"><strong>$59.00</strong>
+											</p>
+										</div>
+									</div>
+									<hr/>
+									<div class="d-flex align-items-center gap-3">
+										<div class="bottom-product-img">
+											<a href="product-details.html">
+												<img src="assets/images/products/10.png" width="80" alt="">
+											</a>
+										</div>
+										<div class="ms-0">
+											<h6 class="mb-0 fw-light mb-1 fw-bold">Orange Headphone</h6>
+											<div class="rating"> <i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+											</div>
+											<p class="mb-0 pro-price"><strong>$59.00</strong>
+											</p>
+										</div>
+									</div>
+									<hr/>
+									<div class="d-flex align-items-center gap-3">
+										<div class="bottom-product-img">
+											<a href="product-details.html">
+												<img src="assets/images/products/11.png" width="80" alt="">
+											</a>
+										</div>
+										<div class="ms-0">
+											<h6 class="mb-0 fw-light mb-1 fw-bold">Samsung Mobile</h6>
+											<div class="rating"> <i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+											</div>
+											<p class="mb-0 pro-price"><strong>$59.00</strong>
+											</p>
+										</div>
+									</div>
+									<hr/>
+									<div class="d-flex align-items-center gap-3">
+										<div class="bottom-product-img">
+											<a href="product-details.html">
+												<img src="assets/images/products/12.png" width="80" alt="">
+											</a>
+										</div>
+										<div class="ms-0">
+											<h6 class="mb-0 fw-light mb-1 fw-bold">Apple Notebook</h6>
+											<div class="rating"> <i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+											</div>
+											<p class="mb-0 pro-price"><strong>$59.00</strong>
+											</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col">
+								<div class="top-rated-products-list mb-3">
+									<h6 class="mb-3 text-uppercase fw-bold">Top rated Products</h6>
+									<hr>
+									<div class="d-flex align-items-center gap-3">
+										<div class="bottom-product-img">
+											<a href="product-details.html">
+												<img src="assets/images/products/13.png" width="80" alt="">
+											</a>
+										</div>
+										<div class="ms-0">
+											<h6 class="mb-0 fw-light mb-1 fw-bold">Ronaldo Football</h6>
+											<div class="rating"> <i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+											</div>
+											<p class="mb-0 pro-price"><strong>$59.00</strong>
+											</p>
+										</div>
+									</div>
+									<hr/>
+									<div class="d-flex align-items-center gap-3">
+										<div class="bottom-product-img">
+											<a href="product-details.html">
+												<img src="assets/images/products/14.png" width="80" alt="">
+											</a>
+										</div>
+										<div class="ms-0">
+											<h6 class="mb-0 fw-light mb-1 fw-bold">Red Fancy Sofa</h6>
+											<div class="rating"> <i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+											</div>
+											<p class="mb-0 pro-price"><strong>$59.00</strong>
+											</p>
+										</div>
+									</div>
+									<hr/>
+									<div class="d-flex align-items-center gap-3">
+										<div class="bottom-product-img">
+											<a href="product-details.html">
+												<img src="assets/images/products/15.png" width="80" alt="">
+											</a>
+										</div>
+										<div class="ms-0">
+											<h6 class="mb-0 fw-light mb-1 fw-bold">Sports Cycle</h6>
+											<div class="rating"> <i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+											</div>
+											<p class="mb-0 pro-price"><strong>$59.00</strong>
+											</p>
+										</div>
+									</div>
+									<hr/>
+									<div class="d-flex align-items-center gap-3">
+										<div class="bottom-product-img">
+											<a href="product-details.html">
+												<img src="assets/images/products/16.png" width="80" alt="">
+											</a>
+										</div>
+										<div class="ms-0">
+											<h6 class="mb-0 fw-light mb-1 fw-bold">Circular Table</h6>
+											<div class="rating"> <i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+												<i class="bx bxs-star text-warning"></i>
+											</div>
+											<p class="mb-0 pro-price"><strong>$59.00</strong>
+											</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--end row-->
+					</div>
+				</section>
+				<!--end bottom products section-->
 			</div>
 		</div>
 		<!--end page wrapper -->
@@ -1706,7 +2038,6 @@
 					<!--end row-->
 				</div>
 			</section>
-			
 
 			<section class="footer-strip text-center py-3 border-top positon-absolute bottom-0">
 				<div class="container">
@@ -1733,118 +2064,6 @@
 			</section>
 		</footer>
 		<!--end footer section-->
-
-
-		<!--start quick view product-->
-		<!-- Modal -->
-		<div class="modal fade" id="QuickViewProduct">
-			<div class="modal-dialog modal-dialog-centered modal-xl modal-fullscreen-xl-down">
-				<div class="modal-content rounded-0 border-0">
-					<div class="modal-body">
-						<button type="button" class="btn-close float-end" data-bs-dismiss="modal"></button>
-						<div class="row g-0">
-							<div class="col-12 col-lg-6">
-								<div class="image-zoom-section">
-									<div class="product-gallery owl-carousel owl-theme border mb-3 p-3" data-slider-id="1">
-										<div class="item">
-											<img src="assets/images/product-gallery/01.png" class="img-fluid" alt="">
-										</div>
-										<div class="item">
-											<img src="assets/images/product-gallery/02.png" class="img-fluid" alt="">
-										</div>
-										<div class="item">
-											<img src="assets/images/product-gallery/03.png" class="img-fluid" alt="">
-										</div>
-										<div class="item">
-											<img src="assets/images/product-gallery/04.png" class="img-fluid" alt="">
-										</div>
-									</div>
-									<div class="owl-thumbs d-flex justify-content-center" data-slider-id="1">
-										<button class="owl-thumb-item">
-											<img src="assets/images/product-gallery/01.png" class="" alt="">
-										</button>
-										<button class="owl-thumb-item">
-											<img src="assets/images/product-gallery/02.png" class="" alt="">
-										</button>
-										<button class="owl-thumb-item">
-											<img src="assets/images/product-gallery/03.png" class="" alt="">
-										</button>
-										<button class="owl-thumb-item">
-											<img src="assets/images/product-gallery/04.png" class="" alt="">
-										</button>
-									</div>
-								</div>
-							</div>
-							<div class="col-12 col-lg-6">
-								<div class="product-info-section p-3">
-									<h3 class="mt-3 mt-lg-0 mb-0">Allen Solly Men's Polo T-Shirt</h3>
-									<div class="product-rating d-flex align-items-center mt-2">
-										<div class="rates cursor-pointer font-13">	<i class="bx bxs-star text-warning"></i>
-											<i class="bx bxs-star text-warning"></i>
-											<i class="bx bxs-star text-warning"></i>
-											<i class="bx bxs-star text-warning"></i>
-											<i class="bx bxs-star text-warning"></i>
-										</div>
-										<div class="ms-1">
-											<p class="mb-0">(24 Ratings)</p>
-										</div>
-									</div>
-									<div class="d-flex align-items-center mt-3 gap-2">
-										<h5 class="mb-0 text-decoration-line-through text-light-3">$98.00</h5>
-										<h4 class="mb-0">$49.00</h4>
-									</div>
-									<div class="mt-3">
-										<h6>Discription :</h6>
-										<p class="mb-0">Virgil Abloh’s Off-White is a streetwear-inspired collection that continues to break away from the conventions of mainstream fashion. Made in Italy, these black and brown Odsy-1000 low-top sneakers.</p>
-									</div>
-									<dl class="row mt-3">	<dt class="col-sm-3">Product id</dt>
-										<dd class="col-sm-9">#BHU5879</dd>	<dt class="col-sm-3">Delivery</dt>
-										<dd class="col-sm-9">Russia, USA, and Europe</dd>
-									</dl>
-									<div class="row row-cols-auto align-items-center mt-3">
-										<div class="col">
-											<label class="form-label">Quantity</label>
-											<select class="form-select form-select-sm">
-												<option>1</option>
-												<option>2</option>
-												<option>3</option>
-												<option>4</option>
-												<option>5</option>
-											</select>
-										</div>
-										<div class="col">
-											<label class="form-label">Size</label>
-											<select class="form-select form-select-sm">
-												<option>S</option>
-												<option>M</option>
-												<option>L</option>
-												<option>XS</option>
-												<option>XL</option>
-											</select>
-										</div>
-										<div class="col">
-											<label class="form-label">Colors</label>
-											<div class="color-indigators d-flex align-items-center gap-2">
-												<div class="color-indigator-item bg-primary"></div>
-												<div class="color-indigator-item bg-danger"></div>
-												<div class="color-indigator-item bg-success"></div>
-												<div class="color-indigator-item bg-warning"></div>
-											</div>
-										</div>
-									</div>
-									<!--end row-->
-									<div class="d-flex gap-2 mt-3">
-										<a href="javascript:;" class="btn btn-dark btn-ecomm">	<i class="bx bxs-cart-add"></i>Add to Cart</a>	<a href="javascript:;" class="btn btn-light btn-ecomm"><i class="bx bx-heart"></i>Add to Wishlist</a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<!--end row-->
-					</div>
-				</div>
-			</div>
-		</div>
-		<!--end quick view product-->
 		<!--Start Back To Top Button--> <a href="javaScript:;" class="back-to-top"><i class='bx bxs-up-arrow-alt'></i></a>
 		<!--End Back To Top Button-->
 	</div>
@@ -1859,7 +2078,6 @@
 	<script src="assets/plugins/perfect-scrollbar/js/perfect-scrollbar.js"></script>
 	<!--app JS-->
 	<script src="assets/js/app.js"></script>
-	<script src="assets/js/index.js"></script>
 </body>
 
 </html>
